# FKEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build_settings.cmake
source/fketest/: CMakeLists.txt  fketest_application_settings.cmake  fketest_application_sources.cmake
source/fketest/private/: main.cpp
source/runtime/fkecore/: CMakeLists.txt  fkecore_module_settings.cmake  fkecore_module_sources.cmake
source/runtime/fkecore/private/: fkecore_globals.cpp  fkecore_module.cpp
source/runtime/fkecore/private/generic_platform/: generic_platform_stricmp.cpp  generic_platform_string.cpp
source/runtime/fkecore/private/logging/: log_macros.cpp
source/runtime/fkecore/private/miscellaneous/: assertion_macros.cpp  c_string.cpp  iostream_output_device.cpp  ofstream_output_device.cpp  output_device.cpp  output_device_helper.cpp  output_device_redirector.cpp  standard_library_include.cpp
source/runtime/fkecore/private/windows_platform/: windows_platform_misc.cpp
source/runtime/fkecore/public/: fkecore.h  fkecore_globals.h  fkecore_module.h  fkecore_types.h
source/runtime/fkecore/public/algorithm/: equal_range.h
source/runtime/fkecore/public/clang_platform/: clang_platform.h  clang_platform_code_analysis.h
source/runtime/fkecore/public/compile_time_type_info/: name_filters.h  name_of.h  type_id.h  type_tag.h
source/runtime/fkecore/public/container/: compile_time_string.h  static_value.h
source/runtime/fkecore/public/generic_platform/: generic_platform.h  generic_platform_compiler_pre_setup.h  generic_platform_misc.h  generic_platform_stricmp.h  generic_platform_string.h  microsoft_platform_string.h
source/runtime/fkecore/public/hardware_abstraction_layer/: platform.h  platform_misc.h  platform_string.h  preprocessor_helpers.h
source/runtime/fkecore/public/hash/: hash.h
source/runtime/fkecore/public/logging/: log_category.h  log_macros.h  log_type.h
source/runtime/fkecore/public/miscellaneous/: assertion_macros.h  build.h  c_string.h  char.h  eastl_pre_setup.h  fkecore_misc_defines.h  iostream_output_device.h  ofstream_output_device.h  output_device.h  output_device_helper.h  output_device_redirector.h  scope_exit.h  standard_library_include.h  time.h  type_info.h  var_args.h  var_args_helper.h
source/runtime/fkecore/public/module/: module_setup.h
source/runtime/fkecore/public/msvc_platform/: msvc_platform.h
source/runtime/fkecore/public/templates/: array_count.h  fkengine_template.h  is_array_or_ref_of_type.h  is_character.h  is_valid_variadic_function_arg.h
source/runtime/fkecore/public/traits/: int_type.h
source/runtime/fkecore/public/windows_platform/: windows_platform.h  windows_platform_code_analysis.h  windows_platform_compiler_pre_setup.h  windows_platform_compiler_setup.h  windows_platform_misc.h  windows_platform_string.h
source/runtime/fkeentities/: CMakeLists.txt  fkeentities_module_settings.cmake  fkeentities_module_sources.cmake
source/runtime/fkeentities/private/: fkeentities_module.cpp
source/runtime/fkeentities/private/types/: archetype_chunk_data.cpp  chunk.cpp
source/runtime/fkeentities/public/: fkeentities_module.h
source/runtime/fkeentities/public/types/: archetype_chunk_data.h  chunk.h  entity.h  shared_component_values.h  types_forward.h
tools/cmake/: build.cmake  check_command_line_arguments.cmake  compiler.cmake  configuration.cmake  configure_cmake.cmake  definitions.cmake  logging.cmake  modules.cmake  platform.cmake
tools/cmake/compiler/: msvc_compiler.cmake
tools/cmake/toolchain/: windows.cmake
